--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,11 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.google.com/?query=bigelow+rules&selection.family=Bigelow+Rules">
 
       
-  <title>Trial app</title>
+  <title>Monsters-rolodex</title>
 </head>
 
 <body>
